--- a/app/views/application/_loginContainer.html.erb
+++ b/app/views/application/_loginContainer.html.erb
@@ -5,7 +5,7 @@
 	<div style="clear: both"></div>
 	<div id="loginBox">
 
-		<%= form_tag 'login', :id => 'loginForm' do  %>
+		<%= form_tag '/login', :id => 'loginForm' do  %>
 		<fieldset id="body">
 			<fieldset>
 				<label for="username">Kullanıcı Adı</label>
