--- a/app/views/index/aramasonuclari.html.erb
+++ b/app/views/index/aramasonuclari.html.erb
@@ -261,19 +261,19 @@
 		</div>
 
 		<div class="panel-body">
-		<input type="checkbox" name="vehicle" value="Bike">&nbsp;0-50 TL<br>
+		<input type="checkbox" name="vehicle" value="Bike">&nbsp;0 - 50 TL<br>
 		</div>
 		<div class="panel-body">
-		<input type="checkbox" name="vehicle" value="Bike">&nbsp;50-100 TL<br>
+		<input type="checkbox" name="vehicle" value="Bike">&nbsp;50 - 100 TL<br>
 		</div>
 		<div class="panel-body">
-		<input type="checkbox" name="vehicle" value="Bike">&nbsp;100-250 TL<br>
+		<input type="checkbox" name="vehicle" value="Bike">&nbsp;100 - 250 TL<br>
 		</div>
 		<div class="panel-body">
-		<input type="checkbox" name="vehicle" value="Bike">&nbsp;250-500 TL<br>
+		<input type="checkbox" name="vehicle" value="Bike">&nbsp;250 - 500 TL<br>
 		</div>
 		<div class="panel-body">
-		<input type="checkbox" name="vehicle" value="Bike">&nbsp;500-1000 TL<br>
+		<input type="checkbox" name="vehicle" value="Bike">&nbsp;500 - 1000 TL<br>
 		</div>
 		</div>
 
