--- a/app/views/user/login.html.erb
+++ b/app/views/user/login.html.erb
@@ -149,12 +149,11 @@
 
 					<div class="mainbox col-lg-4 col-md-4" id="loginbox" style="margin-top: 20px;">
 						<div class="panel panel-info">
-							<div class="panel-heading">
+							<div class="panel panel-heading">
 								<div class="panel-title">
 									Sign In
 								</div>
-								<div
-								style="float: right; font-size: 80%; position: relative; top: -10px">
+								<div style="float: right; font-size: 80%; position: relative; top: -10px">
 									<a href="#">Forgot password?</a>
 								</div>
 							</div>
@@ -214,11 +213,11 @@
 							</div>
 						</div>
 
-						<div class="col-lg-8 col-md-8">
+					</div>
 
-							<img  src="/resources/images/cat-demo.jpg">
+					<div class="col-lg-8 col-md-8">
 
-						</div>
+						<img  src="/resources/images/cat-demo.jpg">
 
 					</div>
 
