--- a/app/views/user/login.html.erb
+++ b/app/views/user/login.html.erb
@@ -111,6 +111,14 @@
 		<script src="resources/js/bootstrap.min.js"></script>
 
 		<div class="container-fluid">
+			
+			<div class="row" style="margin-bottom: 10px;">
+
+				<!-- Login Starts Here -->
+				<%= render "loginContainer" %>
+				<!-- Login Ends Here -->
+
+			</div>
 
 			<div class="row">
 
